[YG] - fixed tablet logo spacing issues

--- a/packages/navigate-theme/src/styles/layouts/_navigation.scss
+++ b/packages/navigate-theme/src/styles/layouts/_navigation.scss
@@ -486,6 +486,12 @@
           }
         }
       }
+
+      &--yg {
+        @include respond(tablet) {
+          margin-top: 1rem;
+        }
+      }
     }
 
     @include respond(desk) {
